# Helping-Material-for-Dev-Opps

./: .gitignore  README.md  license.txt  pyproject.toml
git_commands/: git_commands.html  hooks.py  modules.txt
git_commands/config/: desktop.py  docs.py
git_commands/www/: git_commands.html
